--- a/resources/views/templates/app.twig
+++ b/resources/views/templates/app.twig
@@ -16,6 +16,8 @@
     
     <script src="{{ url }}public/js/inputhistory.min.js"></script>
     <script src="{{ url }}public/js/termynal.min.js" data-termynal-container="#terminal"></script>
+    <script src="{{ url }}public/js/functions.js"></script>
+    <script src="{{ url }}public/js/app.js"></script>
     </body>
 </html>
 
