--- a/resources/views/auth/user/index.twig
+++ b/resources/views/auth/user/index.twig
@@ -5,77 +5,11 @@
     <div id="terminal" data-termynal data-ty-typeDelay="1" data-ty-lineDelay="1">
 
     <p data-ty="input">Logged in as user {{ auth.user.user_login | upper }}.</p>
-    <p data-ty="input">Last login was 2d ago.</p>
+    <p data-ty="input">Last login was {{ auth.user.user_last | date("l g:i a, F j, Y", 'Europe/Copenhagen') }}.</p>
 
     </div>
-
     <form>
     <span>.<input type="text" name="cmd" id="input"/></span>
     </form>
 
-    <script type="text/javascript">
-    $(document).ready(function(){
-
-    $('input').focus();
-
-    $("#input").inputhistory();
-
-            //If user submits the form
-        $("form").submit(function(e){
-
-            e.preventDefault();
-
-            var oldscrollHeight = $(".container").prop("scrollHeight") - 20; //Scroll height before the 
-
-            var input = $("#input").val();
-
-            $("#terminal").append(input, "<br>");
-
-            var data = cmd(input);
-
-            if( data ) {
-
-            var post_data = data;
-
-            var url = input.split(" ")[0];
-
-            $.ajax({
-                type: "POST",
-                url: "{{ base_url() }}/cmd/" + url,
-                cache: false,
-                data: post_data,
-                success: function(data){  
-
-                   var response = $.parseJSON(data);  
-
-                    if (response.redirect !== undefined && response.redirect) {
-
-                       return window.location.href = response.redirect_url;
-
-                    } else {
-                        $("#terminal").append(data, "<br>"); //Insert chat log into the #terminal div  
-                    }   
-                                  
-                },
-                error: function(xhr, status, error) {
-                    var errorMessage = "% Unrecognized command - type HELP for a list";
-                    $("#terminal").append(errorMessage, "<br>");
-                }
-            });
-
-            }
-
-            //Auto-scroll  
-            var newscrollHeight = $(".container").prop("scrollHeight") - 20; //Scroll height after the request
-            if(newscrollHeight > oldscrollHeight){
-                $(".container").animate({ scrollTop: newscrollHeight }, 'normal'); //Autoscroll to bottom of div
-            } 
-
-            $("#input").prop("value", "");
-        });
-
-
-
-    }); 
-    </script>
 {% endblock %}
