--- a/resources/views/templates/app.twig
+++ b/resources/views/templates/app.twig
@@ -14,9 +14,13 @@
         {% block content %}{% endblock %}
     </div>
     
+    <script type="text/javascript">
+    var url = "{{ url }}";
+    </script>
     <script src="{{ url }}public/js/inputhistory.min.js"></script>
     <script src="{{ url }}public/js/termynal.min.js" data-termynal-container="#terminal"></script>
     <script src="{{ url }}public/js/functions.js"></script>
+    <script src="{{ url }}public/js/cmd.js"></script>
     <script src="{{ url }}public/js/app.js"></script>
     </body>
 </html>
