--- a/resources/views/templates/app.twig
+++ b/resources/views/templates/app.twig
@@ -5,7 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>DATANET</title>
         <link rel="stylesheet" type="text/css" href="{{ url }}public/css/style.css">
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     </head>
     <body>
 
@@ -16,9 +15,11 @@
     
     <script type="text/javascript">
     var url = "{{ url }}";
+    var DEBUG = true;
     </script>
-    <script src="{{ url }}public/js/inputhistory.min.js"></script>
-    <script src="{{ url }}public/js/termynal.min.js" data-termynal-container="#terminal"></script>
+    <script src="//code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script>!window.jQuery && document.write('<script src="{{ url }}public/jQuery/3.4.1.min.js"><\/script>');</script>
+    <script src="{{ url }}public/js/jQuery/termynal.min.js" data-termynal-container="#terminal"></script>
     <script src="{{ url }}public/js/functions.js"></script>
     <script src="{{ url }}public/js/cmd.js"></script>
     <script src="{{ url }}public/js/app.js"></script>
