--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,29 @@
 /* CSS Document */
 
-@import url(https://fonts.googleapis.com/css?family=VT323);
+/* vt323-regular - latin */
+@font-face {
+  font-family: 'VT323';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/vt323-v10-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('VT323 Regular'), local('VT323-Regular'),
+       url('../fonts/vt323-v10-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/vt323-v10-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/vt323-v10-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/vt323-v10-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/vt323-v10-latin-regular.svg#VT323') format('svg'); /* Legacy iOS */
+}
 
 
 /*
 * Setup
 */
 body, input, a {
-  background: #000000;
-  color:  #00FF00;
-  text-shadow: #00FF00 0 -1px 35px;
+  background: #132432;
+  color:  #689FDA;
+  text-shadow: #689FDA 0 -1px 35px;
   font-family: 'VT323', Arial, Helvetica, sans-serif;;
-  font-size: 24px;
+  font-size: 120%;
   -webkit-font-smoothing: none;
   line-height: 1.2;
 }
@@ -21,8 +33,22 @@ form, p, span {
     padding:0;
 }
 
+/*
 tr td {
   display: block;
+}
+*/
+
+/* 
+Generic Styling, for Desktops/Laptops 
+*/
+table { 
+  width: 100%; 
+  border-collapse: collapse; 
+}
+
+td, th { 
+  padding: 6px; 
 }
 
 /*
@@ -105,10 +131,10 @@ input {
  */
 body::-webkit-scrollbar-track, body::-webkit-scrollbar-corner
 {
-    background-color: #000000;
+    background-color: #132432;
 }
 
 body::-webkit-scrollbar
 {
-    background-color: #000000;
+    background-color: #132432;
 }
