--- a/resources/views/auth/user/index.twig
+++ b/resources/views/auth/user/index.twig
@@ -9,7 +9,7 @@
 
     </div>
     <form>
-    <span>.<input type="text" name="cmd" id="input"/></span>
+    <span>@<input type="text" name="cmd" id="input" autocomplete="off"/></span>
     </form>
 
 {% endblock %}
