--- a/resources/views/guest/lobby.twig
+++ b/resources/views/guest/lobby.twig
@@ -21,7 +21,7 @@
     </div>
 
     <form>
-    <span>.<input type="text" name="cmd" id="input"/></span>
+    <span>.<input type="text" name="cmd" id="input" autocomplete="off"/></span>
     </form>
     
 {% endblock %}
