--- a/resources/views/templates/app.twig
+++ b/resources/views/templates/app.twig
@@ -15,7 +15,7 @@
     
     <script type="text/javascript">
     var url = "{{ url }}";
-    var DEBUG = true;
+    var DEBUG = false;
     </script>
     <script src="//code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script>!window.jQuery && document.write('<script src="{{ url }}public/jQuery/3.4.1.min.js"><\/script>');</script>
