--- a/resources/views/guest/lobby.twig
+++ b/resources/views/guest/lobby.twig
@@ -16,8 +16,8 @@
 
     <br data-ty>
 
-    <p data-ty="input">Type "?" or <b>HELP</b> for detailed command list.</p>
-    <p data-ty="input">Type <b>NEWUSER</b> < username > < password > [ email ] to create an account.</p>
+    <p data-ty="input">Type <b>HELP</b> for detailed command list.</p>
+    <p data-ty="input">Type <b>NEWUSER</b> to create an account.</p>
     </div>
 
     <form>
