--- a/resources/views/templates/app.twig
+++ b/resources/views/templates/app.twig
@@ -5,11 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>DATANET</title>
         <link rel="stylesheet" type="text/css" href="{{ url }}public/css/style.css">
+        <link rel="stylesheet" type="text/css" href="{{ url }}public/css/OS/BASIC.css">
     </head>
     <body>
 
     <div class="container">
-        {% include 'templates/partials/flash.twig' %}
         {% block content %}{% endblock %}
     </div>
     
