--- a/resources/views/templates/app.twig
+++ b/resources/views/templates/app.twig
@@ -14,8 +14,8 @@
     </div>
     
     <script type="text/javascript">
-    var url = "{{ url }}";
-    var DEBUG = false;
+    var url = "{{ settings.url.local }}";
+    var DEBUG = "{{ settings.displayErrorDetails }}";
     </script>
     <script src="//code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script>!window.jQuery && document.write('<script src="{{ url }}public/jQuery/3.4.1.min.js"><\/script>');</script>
