--- a/resources/views/auth/host/UNIX.twig
+++ b/resources/views/auth/host/UNIX.twig
@@ -16,8 +16,8 @@
 
     <br data-ty>
 
-    <p data-ty="input">The IBM Personal Computer DOS</p>
-    <p data-ty="input">Version 1.0 (C)Copyright IBM Corp 1981, 1982</p>
+    <p data-ty="input">UNIX BSD System</p>
+    <p data-ty="input">Version 1.0 (C)Copyright AT&T Corp 1981, 1982</p>
 
     <br data-ty>
 
@@ -25,7 +25,7 @@
     </div>
 
     <form>
-    <span>@<input type="text" name="cmd" id="input" autocomplete="off"/></span>
+    <span>{{ auth.host.host_name }}@<input type="text" name="cmd" id="input" autocomplete="off"/></span>
     </form>
     
 {% endblock %}
