--- a/resources/views/auth/host/BASIC.twig
+++ b/resources/views/auth/host/BASIC.twig
@@ -21,6 +21,10 @@
 
     <br data-ty>
 
+    <p data-ty="input">### {{ auth.host.host_motd|upper }} ###</p>
+
+    <br data-ty>
+
     <p data-ty="input">Type <b>HELP</b> for detailed command list.</p>
     </div>
 
