--- a/resources/views/auth/host/COM-64.twig
+++ b/resources/views/auth/host/COM-64.twig
@@ -16,8 +16,9 @@
 
     <br data-ty>
 
-    <p data-ty="input">The IBM Personal Computer DOS</p>
-    <p data-ty="input">Version 1.0 (C)Copyright IBM Corp 1981, 1982</p>
+    <p data-ty="input">**** COMMODORE 64 V2 ****</p>
+    <p data-ty="input">64K RAM SYSTEM</p>
+    <p data-ty="input">READY.</p>
 
     <br data-ty>
 
