--- a/resources/views/auth/host/CPM-86.twig
+++ b/resources/views/auth/host/CPM-86.twig
@@ -16,8 +16,8 @@
 
     <br data-ty>
 
-    <p data-ty="input">The IBM Personal Computer DOS</p>
-    <p data-ty="input">Version 1.0 (C)Copyright IBM Corp 1981, 1982</p>
+    <p data-ty="input">CP/M-86 for the IBM PC, Version 1.0</p>
+    <p data-ty="input">(C)Copyright 1983, Digital Research</p>
 
     <br data-ty>
 
