--- a/resources/views/templates/app.twig
+++ b/resources/views/templates/app.twig
@@ -31,7 +31,7 @@
     <script src="{{ url }}public/js/jQuery/termynal.min.js" data-termynal-container="#terminal"></script>
     <script src="{{ url }}public/js/functions.js"></script>
     <script src="{{ url }}public/js/cmd.js"></script>
-    <script src="{{ url }}public/js/app.js"></script>
+    <script src="{{ url }}public/js/script.js"></script>
     </body>
 </html>
 
